landing_page: Fix images not visible on a couple of pages.
/zulip-cloud and /self-hosting images were not visible in Firefox
since `width: 100%` wasn't enough for Firefox to resolve a
width for the images.

Fixed by defining explicit width / height for the images.

--- a/web/styles/portico/legacy_landing_page.css
+++ b/web/styles/portico/legacy_landing_page.css
@@ -2723,7 +2723,13 @@ button {
         }
 
         .feature-icon img {
-            width: 100%;
+            width: auto;
+            height: 300px;
+
+            @media (width > 768px) {
+                width: 300px;
+                height: auto;
+            }
         }
     }
 
@@ -2887,9 +2893,4 @@ button {
     @media (width <= 768px) {
         font-size: 2em !important;
     }
-}
-
-.zulip-cloud-page .man-mobile-image {
-    width: auto;
-    height: 300px;
 }
